--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bootstrap demo</title>
-    <link rel="stylesheet" href="./css/style.scss">
+    <link rel="stylesheet" href="./css/style.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -52,10 +52,15 @@
       crossorigin="anonymous"
     ></script>
     
-    <p>
-        
-    </p>
+    <h2>Gif Search</h2>
 
+    <h3>
+       <form action="#"></form>
+       <input type="text">
+       <button>Search</button>
+    </h3>
 
   </body>
+
+  <footer>Cristian Resendiz</footer>
 </html>
