work on .js for gifs search

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bootstrap demo</title>
-    <link rel="stylesheet" href="./css/style.css">
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
-    <script src="./js/main.js"></script>
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/main.js" defer></script>
   </head>
   <body>
     <header>
@@ -44,26 +45,25 @@
           </div>
         </div>
       </nav>
-
     </header>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-      crossorigin="anonymous"
-    ></script>
     
     <h2>Gif Search</h2>
 
-    <form action="Search"></form>
+    <form action="Search">
+      <input type="submit" value="">
+    </form>
+
     <input type="text">
+ 
     <button>Search</button>
 
-
-
-      
-<footer>2025 Cristian Resendiz</footer>
+    <div id="imageContainer"></div>
+  
+  <footer>2025 Cristian Resendiz</footer>
+  <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"
+  ></script>
   </body>
-
-
 </html>
