fixing search bar

--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
 
     <h1>Gif Search</h1>
 
-    <input type="text" name ="SearchGif" id = "SearchGif" value="123">
+    <p>
+    <input type="text" name ="SearchGif" id = "SearchGif" value="">
     <input type="button" value="Search" onclick="fetchImgWidth()">
 
     <div id="imageContainer"></div>
-  
+    </p>
   <footer>2025 Cristian Resendiz</footer>
   
   <script
