--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg navbar-custom">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Home</a>
           <button
@@ -57,9 +57,9 @@
     <p>
     <input type="text" name ="SearchGif" id = "SearchGif" value="">
     <input type="button" value="Search" onclick="fetchImgWidth()">
-
+      </p>
     <div id="imageContainer"></div>
-    </p>
+    
   <footer>2025 Cristian Resendiz</footer>
   
   <script
