--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Gifs</a>
+                <a class="nav-link active" aria-current="page" href="#"></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Gif</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Images</a>
