Changed Gif Search text font

--- a/index.html
+++ b/index.html
@@ -16,8 +16,20 @@
     
     <script src="./js/main.js" defer></script>
 
+       <style>
+      @import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Orbitron&display=swap');
+      h1{
+        font-family: "Orbitron", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 400;
+        font-style: normal;
+       }
+
+    </style>
+
   </head>
-  
+ 
+
   <body>
     
     <header>
